--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="lightBlue">#40c4ff</color>
+    <color name="gray1">#9e9e9e</color>
+    <color name="white">#ffffff</color>
 </resources>
