--- a/app/src/main/res/layout/head_toolbar.xml
+++ b/app/src/main/res/layout/head_toolbar.xml
@@ -3,7 +3,7 @@
     android:id="@+id/toolbar"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="?attr/actionBarSize"
     android:background="@color/lightBlue"
     >
 
