--- a/app/src/main/res/layout/lin_menu.xml
+++ b/app/src/main/res/layout/lin_menu.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:padding="10dp"
         >
 
