--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="lightBlue">#40c4ff</color>
     <color name="gray1">#9e9e9e</color>
     <color name="white">#ffffff</color>
+    <color name="trans_gray">#66000000</color>
 </resources>
