--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="gray1">#9e9e9e</color>
     <color name="white">#ffffff</color>
     <color name="trans_gray">#66000000</color>
+    <color name="black">#000000</color>
 </resources>
