--- a/app/src/main/res/layout/head_toolbar.xml
+++ b/app/src/main/res/layout/head_toolbar.xml
@@ -1,29 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar
-    android:id="@+id/toolbar"
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/toolbar_wrapper"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:background="@color/lightBlue"
-    >
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/header_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/demo"
-        android:textColor="@color/white"
-        android:textSize="16sp" />
+    <android.support.v7.widget.Toolbar
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/lightBlue"
+        >
 
-    <TextView
-        android:id="@+id/header_right_tv"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:text="@string/share"
-        android:layout_gravity="right|center_vertical"
-        android:gravity="center"
-        android:layout_marginRight="10dp"
-        />
+        <TextView
+            android:id="@+id/header_title"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/demo"
+            android:textColor="@color/black"/>
 
-</android.support.v7.widget.Toolbar>
+        <TextView
+            android:id="@+id/header_right_tv"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="right|center_vertical"
+            android:layout_marginRight="10dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:gravity="center"
+            android:text="@string/share"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            />
+
+
+    </android.support.v7.widget.Toolbar>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:background="@drawable/shadow"/>
+</LinearLayout>
