--- a/app/src/main/res/layout/lin_main.xml
+++ b/app/src/main/res/layout/lin_main.xml
@@ -16,7 +16,7 @@
 
         </FrameLayout>
         <ProgressBar
-            android:id="@+id/pb_main"
+            android:id="@+id/progressbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
