--- a/app/src/main/res/layout/head_toolbar.xml
+++ b/app/src/main/res/layout/head_toolbar.xml
@@ -25,10 +25,9 @@
 
         <TextView
             android:id="@+id/header_right_tv"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="?attr/actionBarSize"
+            android:layout_height="?attr/actionBarSize"
             android:layout_gravity="right|center_vertical"
-            android:layout_marginRight="10dp"
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:gravity="center"
